--- a/index.html
+++ b/index.html
@@ -3,6 +3,42 @@
 	<head>
 		<title>Blogg</title>
 		<meta charset="utf-8">
+		<style>
+			#header {
+				background-color: #F1F1F1;
+				margin-left: 100px;
+				margin-right: 100px;
+				margin-bottom: 15px;
+				border: groove;
+				border-color: blue;
+				padding: 30px;
+			}
+			
+			#nav {
+				background-color: #F1F1F1;
+				float: left;
+				height: 370px;
+				width: 200px;
+				margin-left: 100px;
+				margin-right; 100px;
+				border: groove;
+				border-color: blue;
+				padding: 30px;
+			}
+			
+			#container {
+				background-color: #F1F1F1;
+				float: left;
+				height: 400px;
+				width: 400px;
+				margin-left: 10px;
+				margin-right: 60px;
+				border: groove;
+				padding: 15px;
+				border-color: blue;
+				
+				}
+		</style>
 	</head>
 	<body>
 	
@@ -20,6 +56,13 @@
 		</div>
 		
 		<div id="container">
+			<p> innholdet her, lorem ipsum. controlling the box size. <br>
+			Controlling the box size. controlling the box size. <br>
+			Controlling the box size. controlling the box size. <br>
+			Controlling the box size<br>
+			. controlling the box size. Controlling the box size<br>
+			. controlling the box size. Controlling the box size<br>
+			. controlling the box size. Controlling the box size. Hva skjer om jeg skriver for bredt her? sdadskajdkasljdklsjadklsja</p>
 		
 		</div>
 		
